# open-investment-model

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT-UPDATE-2026-06-16.md  GCP-DEPLOYMENT-GUIDE.md  GCP-DEPLOYMENT-MANIFEST.md  GCP-DEPLOYMENT-PLAN-GKE-CLOUDSQL.md  GCP-DEPLOYMENT-PLAN.md  GOVERNANCE.md  LICENSE  PRIOR-ART.md  README.md
exports/: openim-edges.csv  openim-graph-description.json  openim-graph.cypher  openim-graph.gql  openim-graph.pgq.sql  openim-neo4j-edges.csv  openim-neo4j-nodes.csv  openim-nodes.csv  openim-schema.json  openim-snowflake.sql  openim.archimate  openim.rdf  (+2 more)
reference/python/: README.md  pyproject.toml
reference/python/src/agentinvest_canonical_model/: __init__.py  base.py  drift.py  entities.py
reference/python/src/agentinvest_demo/: __init__.py  __main__.py  book_of_record_data.py  canonical_inspect.py  comparator_feed_data.py  entity_resolution_data.py  marts.py  nav_marts_read.py  phase2_demo.py  restate_client.py
reference/python/src/agentinvest_evals/: __init__.py  __main__.py  gate_e.py  record_then_score.py  runner.py  schema.py  selector.py
reference/python/src/agentinvest_orchestrator/: __init__.py  plan_schema.py  planner.py  service.py  tool_catalogue.py
reference/python/src/agentinvest_tools/: __init__.py  arg_resolver_service.py  bd09_service.py  bd12_recon_service.py  bd12_service.py  canonical_data_service.py  endpoint.py  entity_resolution_service.py  mcp_server.py  nav_data_service.py  openapi_surface.py  py_tools_service.py  request_serde.py  sample.py
reference/python/src/agentinvest_tools/bd09/: __init__.py  benchmark_relative_return.py  contribution_breakdown.py  money_weighted_return.py  time_weighted_return.py  total_return.py
reference/python/src/agentinvest_tools/bd12/: __init__.py  accrued_income.py  book_close_state.py  cash_exposure.py  cash_flow_event.py  cost_basis.py  pending_activity.py  position.py  transaction.py
reference/python/src/agentinvest_tools/bd12_recon/: __init__.py  break_finding.py  break_store.py  cash_reconcile.py  evidence_bundle.py  ibor_abor_reconcile.py  position_reconcile.py  proposal_store.py  proposer.py  transaction_match.py
reference/python/src/agentinvest_tools/entity_resolution/: __init__.py  cascade.py  golden_record_store.py  normaliser.py  review_queue_store.py
reference/python/tests/: test_arg_resolver_service.py  test_bd09_benchmark_relative_return.py  test_bd09_contribution_breakdown.py  test_bd09_money_weighted_return.py  test_bd09_service.py  test_bd09_synthetic_integration.py  test_bd09_time_weighted_return.py  test_bd09_total_return.py  test_bd12_recon_break_store.py  test_bd12_recon_engine.py  test_bd12_recon_proposal_store.py  test_bd12_recon_proposer.py  test_bd12_service.py  test_bd12_tools.py  test_book_of_record_data.py  test_canonical_data_service.py  test_canonical_drift.py  test_canonical_schemas.py  test_entity_resolution_cascade.py  test_entity_resolution_eval.py  test_entity_resolution_service.py  test_entity_resolution_stores.py  test_evals_harness.py  test_llm_service.py  test_mcp_server.py  test_nav_data_service.py  test_nav_marts_read.py  test_openapi_lint_fixture.py  test_openapi_surface.py  test_phase2_demo_integration.py  test_planner.py  test_planner_service.py  test_py_tools_service.py  test_record_then_score.py  test_sample.py
reference/python/tests/fixtures/: bd09-openapi.captured.json
(+854 files in other folders)
